Changed Guest Header to Away

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <button onclick="addHomePoints(3)">+3</button>
             </div>
             <div class="score">
-                <h3>GUEST</h3>
+                <h3>AWAY</h3>
                 <h2 id="guest-score">0</h2>
                 <button onclick="addGuestPoints(1)">+1</button>
                 <button onclick="addGuestPoints(2)">+2</button>
